# agent-lab

./: .env.development  .env.example  .env.production  .env.test  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/api/: .env.example  Dockerfile.prod  alembic.ini  main.py  pyproject.toml  requirements.txt  validate_installation.py
apps/api/api/: __init__.py
apps/api/api/v1/: __init__.py  audit.py  bmad_mcp.py  bmad_templates.py  clients.py  contacts.py  documents.py  export.py  gates.py  health.py  implementation_types.py  projects.py  service_categories.py  services.py  workflows.py
apps/api/core/: __init__.py  config.py  database.py  document_utils.py  exceptions.py  sanitization.py  workflow_templates.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  090f812c94b9_seed_reference_data.py  126b23b40b72_story_3_1_bmad_template_tables.py  3c0d9b26a0a0_story_3_2_gate_management_tables.py  4b1aad8dfa3c_add_workflow_events_table.py  51bd71c161cb_add_audit_logging.py  6c7a6edca855_add_cascade_delete_to_services_client_fk.py  7f75422758cd_add_check_constraints.py  b9f0d02517ea_merge_epic_2_branches.py  c56eafd5499e_update_project_implementation_type_add_.py  e2fa0f621a83_add_document_metadata_management.py  f5901a3f30ea_add_contact_and_service_category_tables.py
apps/api/models/: __init__.py  database.py  gate.py  schemas.py
apps/api/repositories/: __init__.py  base.py  client_repository.py  comment_repository.py  contact_repository.py  document_repository.py  document_version_repository.py  implementation_type_repository.py  project_repository.py  service_category_repository.py  service_repository.py  workflow_event_repository.py
apps/api/scripts/: README.md  backup_database.sh  restore_database.sh  seed_dev_data.py  seed_test_data.py  validate_migrations.py
apps/api/services/: __init__.py  bmad_template_service.py  document_service.py  embedding_service.py  gate_service.py  mcp_service.py  workflow_service.py  workflow_validators.py
apps/api/services/interfaces/: __init__.py  workflow_progression_interface.py
apps/api/services/llm/: __init__.py  anthropic_provider.py  base_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/fixtures/: factories.py
apps/api/tests/fixtures/llm/: __init__.py  claude_responses.py  ollama_responses.py  openai_responses.py
apps/api/tests/integration/: test_bmad_integration.py  test_clients_api.py  test_contacts_api.py  test_document_api.py  test_epic2_epic3_integration.py  test_gate_api.py  test_health.py  test_pgvector.py  test_projects_api.py  test_service_categories_api.py  test_workflow_api.py
apps/api/tests/unit/: test_document_service.py  test_document_utils.py  test_models.py  test_sanitization.py  test_validation.py  test_workflow_service.py  test_workflow_templates.py  test_workflow_validators.py
(+185 files in other folders)
